index.css
body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: rgba(255, 255, 255, 0.8);
}

#root {
  background: url('XF28b4k_maybe_finished_no-logo1920x1080.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  --main-font-color: #FFF;
}

header {
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-rows: 1fr 20% 1fr;
  grid-template-areas:
    ". . ."
    ". a ."
    ". . .";
}

.title {
  grid-area: a;
  text-align: center;
  font-size: 6.5vmin;
  font-weight: bold;
  text-shadow: 0 0 10px #000;
  color: var(--main-font-color);
}

.section {
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.2);
}

.section-title {
  position: absolute;
  margin: 5px;
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  font-weight: bold;
  font-size: 200%;
  color: var(--main-font-color);
}

.expertise {
  min-height: 100%;
  display: grid;
  grid-template-columns: 1fr repeat(3, 28vw) 1fr;
  grid-template-rows: 1fr 80% 1fr;
  grid-column-gap: 3%;
  grid-template-areas: 
    ". . . . ."
    ". a b c ."
    ". . . . .";
  text-align: center;
}

.expertise > * {
  margin: 15% 0;
}

.expertise > *:first-child {
  grid-area: a;
}

.expertise > *:nth-child(2) {
  grid-area: b;
}

.expertise > *:last-child {
  grid-area: c;
}

@media (max-width: 1050px) {
  .expertise {
    grid-template-columns: 1fr 80vw 1fr;
    grid-template-rows: repeat(3, 1fr);
    grid-template-areas:
      ". a ."
      ". b ."
      ". c .";
  }

  .expertise > * {
    margin: 0;
    margin-top: 5%;
  }

  .expertise > *:last-child {
    margin-bottom: 5%;
  }
}

.competence-block {
  border-radius: 3px;
}

.competence-title {
  font-size: 200%;
  font-weight: bold;
  text-align: center;
  padding-top: 3%;
  color: #CCC;
}

.competence-title-border {
  height: 1px;
  width: 90%;
  background: #CCC;
  margin: 3px auto 0 auto;
  -webkit-filter: blur(1px);
  -moz-filter: blur(1px);
  -o-filter: blur(1px);
  -ms-filter: blur(1px);
  filter: blur(1px);
}

.competence-description {
  color: #CCC;
  font-size: 120%;
  text-align: left;
  padding: 3% 6%;
}

.skills {
  min-height: 100%;
  display: grid;
  grid-template-columns: 40% 60%;
  grid-template-areas: "a b";
  padding-bottom: 30px;
}

.part {
  padding: 30px 0;
}

.left {
  grid-area: a;
  text-align: left;
  margin-left: 30%;
}

.left > span {
  font-size: 200%;
  font-weight: bold;
  font-style: italic;
}

.right {
  grid-area: b;
  text-align: center;
}

.right > *:not(:last-child) {
  margin-bottom: 10px;
}

.skill-title {
  text-align: left;
  margin-left: 10%;
  font-size: 120%;
  font-weight: 300;
}

.skill-description {
  text-align: left;
  width: 80%;
  margin-left: calc(10% + 20px);
}

@media (max-width: 880px) {
  .skills {
    grid-template-columns: 1fr;
    grid-template-areas:
      "a"
      "b";
  }

  .part {
    padding: 30px 30px 0 0;
  }

  .part:last-child {
    padding-bottom: 30px;
  }

  .left {
    margin-left: 10%;
  }
}

#links {
  position: fixed;
  background: #FFF;
  padding: 5px 5px 1px 5px;
}

#links a {
  margin: 0 10px;
  text-decoration: none;
}

@media (min-width: 667.1px) {
  #links {
    top: 0;
    right: 0;
    border-bottom-left-radius: 5px;
  }
}

@media (max-width: 667px) {
  #links {
    bottom: 0;
    right: 0;
    border-top-left-radius: 5px;
  }
}

